# linalg-visual-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  ui.cpp  ui.h
src/: main.cpp
src/app/: App.cpp  App.hpp  SceneParams.hpp
src/math/: Basis.cpp  Basis.hpp  Camera.cpp  Camera.hpp  Lighting.cpp  Lighting.h  Quaternion.cpp  Quaternion.h  Shadow.cpp  Shadow.h  Types.hpp
src/render/: Mesh.cpp  Mesh.hpp  Projection.cpp  Projection.hpp
src/ui/: MatrixLabUI.cpp  MatrixLabUI.hpp
tests/: QuaternionTest.cpp
